--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ button {
 
 
 <!-- MOVED OUTSIDE CARD BELOW IT -->
-<button id="playMusicBtn">▶🙈 Play Music</button>
+<button id="playMusicBtn">▶🙈 Play Music(press twice)</button>
 
 <div id="musicWrapper">
 <iframe width="100%" height="300" allow="autoplay"
